# shelly

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUTURE.md  PLAN.md  README.md  SECURITY.md  deny.toml  dist-workspace.toml  package.json  pnpm-workspace.yaml
.changeset/: config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: ci.yml  deploy-relay.yml  deploy-site.yml  release-android.yml  release-ios.yml  release-npm.yml  release-rust.yml  version-packages.yml
apps/android/: DESIGN_IMPL_GUIDE.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/debug/: AndroidManifest.xml
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/res/drawable/: ic_launcher.xml  ic_notification.xml
apps/android/app/src/main/res/values-night/: styles.xml
apps/android/scripts/: build-rust.sh
apps/ios/Fieldwork.xcodeproj/: project.pbxproj
apps/ios/Fieldwork.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
apps/ios/Resources/: Info.plist
apps/ios/Shelly.xcodeproj/: project.pbxproj
apps/ios/Shelly.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
apps/ios/Sources/App/: AppDelegate.swift  AppModel.swift  FieldworkApp.swift  ShellyApp.swift
apps/ios/Sources/Core/: FieldworkCoreStubs.swift  FieldworkService.swift  KeychainStore.swift  MobileTelemetry.swift  SecurityGate.swift  ShellyCoreStubs.swift  ShellyService.swift  TerminalSessionController.swift
apps/ios/Sources/Features/Pairing/: PairingView.swift
apps/ios/Sources/Features/Sessions/: SessionsListView.swift
apps/ios/Sources/Features/Settings/: OpenSourceLicensesView.swift  SettingsView.swift
apps/ios/Sources/Features/Terminal/: SwiftTermView.swift  TerminalScreen.swift
apps/ios/Sources/UI/: Theme.swift
apps/ios/scripts/: build-rust.sh
crates/cli/: Cargo.toml
crates/cli/src/: ipc.rs  iroh_client.rs  main.rs  service.rs  settings.rs  update_notice.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: authz.rs  config.rs  forward.rs  ipc.rs  logging.rs  main.rs  pairing.rs  paths.rs  persistence.rs  push.rs  ring.rs  session.rs  terminal_model.rs  transport_iroh.rs
crates/daemon/src/state_infer/: claude.rs  codex.rs  mod.rs  unknown.rs
crates/daemon/tests/fixtures/: README.md  claude_code_no_prompt_redacted.txt  claude_code_turn_redacted.txt  codex_remote_control_redacted.jsonl  codex_status_events_redacted.jsonl
crates/mobile-core/: Cargo.toml
crates/mobile-core/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: code.rs  framing.rs  lib.rs  messages.rs  types.rs  version.rs
crates/protocol/src/snapshots/: fieldwork_protocol__tests__client_to_server_wire_round_trips.snap  fieldwork_protocol__tests__server_to_client_wire_round_trips.snap  shelly_protocol__tests__client_to_server_wire_round_trips.snap  shelly_protocol__tests__server_to_client_wire_round_trips.snap
crates/relay/: Cargo.toml
crates/relay/src/: apns.rs  fcm.rs  iroh_fallback.rs  lib.rs  main.rs  privacy_tracing.rs  telemetry.rs
docs/: ANDROID_BACKGROUND_FOREGROUND.md  ANDROID_BIOMETRIC.md  ANDROID_COLD_START.md  ANDROID_DOGFOOD.md  ANDROID_FCM_PUSH.md  ANDROID_MULTISESSION.md  ANDROID_NETWORK_RECONNECT.md  ANDROID_PAIR_FLOW.md  ANDROID_RENDERER.md  ANDROID_RENDERER_FLOOD.md  ANDROID_RESIZE_DETACH.md  ANDROID_RESTART_RESTORE.md  ANDROID_SESSION_SUBSCRIPTION.md  ANDROID_TERMINAL_ATTACH.md  ARCHITECTURE.md  DEVELOPMENT.md  INSTALL.md  LIVE_TESTING.md  MACOS_DAEMON_SURVIVAL.md  OPERATIONS.md  PRIVACY.md  PROTOCOL.md  RELAY_HONEYCOMB.md  RELEASE_AUDIT.md  SECURITY.md  SENTRY_RECEIPT.md  STORE_PRIVACY.md  open-source-notices.json
infra/lightsail/: README.md
infra/lightsail/terraform/: main.tf  outputs.tf  variables.tf
infra/oracle/: README.md  provision-region.sh  watch-a1-capacity.sh
infra/oracle/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infra/relay/ansible/: inventory.ini  playbook.yml
infra/relay/ansible/group_vars/all/: main.yml
infra/relay/ansible/templates/: Caddyfile.j2  fieldwork-control-plane.service.j2  fieldwork-iroh-relay.service.j2  shelly-control-plane.service.j2  shelly-iroh-relay.service.j2
scripts/: android-evidence-common.mjs  build-local-npm-artifacts.sh  check-android-release-readiness.mjs  check-domain-status.mjs  check-github-namespace.mjs  check-infra-terraform.sh  check-ios-prereqs.sh  check-live-testing-readiness.mjs  check-local-release.mjs  create-android-background-foreground-evidence-dir.mjs  create-android-biometric-evidence-dir.mjs  create-android-cold-start-evidence-dir.mjs  create-android-dogfood-evidence-dir.mjs  create-android-fcm-push-evidence-dir.mjs  create-android-multisession-evidence-dir.mjs  create-android-network-reconnect-evidence-dir.mjs  create-android-pair-flow-evidence-dir.mjs  create-android-release-evidence-pack.mjs  create-android-release-install-evidence-dir.mjs  create-android-release-signing-evidence-dir.mjs  create-android-renderer-flood-evidence-dir.mjs  create-android-resize-detach-evidence-dir.mjs  create-android-restart-restore-evidence-dir.mjs  create-android-session-subscription-evidence-dir.mjs  create-android-terminal-attach-evidence-dir.mjs  create-live-testing-evidence-dir.mjs  create-live-testing-fw-shim.mjs  create-live-testing-pack.mjs  create-macos-daemon-survival-evidence-dir.mjs  create-macos-signing-evidence-dir.mjs  create-npm-release-evidence-dir.mjs  create-relay-honeycomb-evidence-dir.mjs  create-release-artifacts-evidence-dir.mjs  debug-instance.sh  generate-oss-notices.mjs  measure-desktop-performance.mjs  pair-test.sh  pick-android-pair-button.py  prepare-npm-artifacts.mjs  publish-npm-packages.mjs  (+132 more)
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/src/layouts/: BaseLayout.astro
site/src/pages/: architecture.astro  index.astro  install.astro  privacy.astro  protocol.astro
site/src/styles/: global.css
(+119 files in other folders)
