[workspace]
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/cli",
    "crates/relay",
    "crates/mobile-core",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/iamjr15/shelly"
authors = ["Shelly contributors"]
description = "Shelly universal terminal handoff workspace."

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
backon = "1.6"
base64 = "0.22"
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
bytes = "1"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
dashmap = "6"
data-encoding = "2"
ed25519-dalek = "2"
figment = { version = "0.10", features = ["env"] }
garde = { version = "0.22", features = ["derive", "regex"] }
interprocess = { version = "2.2", features = ["tokio"] }
iroh = { version = "=1.0.0-rc.0", features = ["platform-verifier"] }
iroh-relay = { version = "=1.0.0-rc.0", features = ["server", "platform-verifier"] }
jni = "0.22.4"
keyring = { version = "=3.6.2", features = ["apple-native", "linux-native-sync-persistent", "vendored"] }
libc = "0.2"
insta = { version = "1", features = ["yaml"] }
moka = { version = "0.12", features = ["sync"] }
ndk-context = "0.1.1"
portable-pty = "0.9"
postcard = { version = "1", features = ["use-std"] }
p256 = "0.13"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-blocking-client", "reqwest-rustls", "trace"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace"] }
proptest = "1"
qrcode = "0.14"
redb = "2"
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "rustls"] }
ring = "0.17"
rmp-serde = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", features = ["ring"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service-manager = "0.11.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.32", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = { version = "=0.31.1", features = ["tokio"] }
uuid = { version = "1", features = ["serde", "v7"] }
wezterm-term = { package = "tattoy-wezterm-term", version = "=0.1.0-fork.5" }
