[package]
name = "shelly-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shelly desktop CLI."

[features]
default = []
test-client = ["dep:iroh"]

[[bin]]
name = "shelly"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
shelly-protocol = { path = "../protocol" }
interprocess.workspace = true
iroh = { workspace = true, optional = true }
libc.workspace = true
qrcode.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
semver.workspace = true
serde.workspace = true
service-manager.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
