[package]
name = "fieldwork-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fieldwork host daemon."

[[bin]]
name = "fieldworkd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
backon.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
dashmap.workspace = true
data-encoding.workspace = true
ed25519-dalek.workspace = true
figment.workspace = true
fieldwork-protocol = { path = "../protocol" }
interprocess.workspace = true
iroh.workspace = true
keyring.workspace = true
libc.workspace = true
portable-pty.workspace = true
redb.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wezterm-term.workspace = true

[dev-dependencies]
axum.workspace = true
proptest.workspace = true
tempfile.workspace = true
