[package]
name = "fieldwork-mobile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fieldwork Rust mobile core."

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
iroh.workspace = true
fieldwork-protocol = { path = "../protocol" }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi = { workspace = true, features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-context.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
