[package]
name = "shelly-mobile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shelly Rust mobile core."

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
iroh.workspace = true
shelly-protocol = { path = "../protocol" }
reqwest.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi = { workspace = true, features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-context.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
