[package]
name = "shelly-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shelly v1 wire protocol types and framing."

[dependencies]
bincode.workspace = true
data-encoding.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
rmp-serde.workspace = true
